update query xml docs